# arkline-py

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/client/: arkline_ai.py
app/core/: arkline_ai.py
app/crud/: message.py
app/db/: session.py
app/models/: model.py  models.py
app/routers/: auth.py  rtr_message.py
app/schemas/: schema.py  schemas.py
app/utils/: extract_json.py  util.py
